--- a/.editorconfig
+++ b/.editorconfig
@@ -4,4 +4,4 @@
 dotnet_diagnostic.IDE1006.severity = silent
 
 # CS1591: Missing XML comment for publicly visible type or member
-dotnet_diagnostic.CS1591.severity = silent
+dotnet_diagnostic.CS1591.severity = none
