--- a/App.config
+++ b/App.config
@@ -49,8 +49,10 @@
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
   <connectionStrings>
-    <add name="Database117" connectionString="Server=sv21.byethost21.org;Port=3306;Database=jacobbro_test123;Uid=jacobbro_test123;Pwd=test123;Connection Timeout=5;"/>
-    <add name="KeyBit_ID.Properties.Settings.KeyStoreConnectionString" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\KeyStore.accdb" providerName="System.Data.OleDb"/>
+    <add name="Database117" connectionString="Server=sv21.byethost21.org;Port=3306;Database=jacobbro_test123;Uid=jacobbro_test123;Pwd=test123;Connection Timeout=5;" />
+    <add name="KeyBit_ID.Properties.Settings.KeyStoreConnectionString"
+      connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=|DataDirectory|\KeyStore.accdb"
+      providerName="System.Data.OleDb" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
@@ -70,7 +72,13 @@
         <value>False</value>
       </setting>
       <setting name="AccountImage" serializeAs="String">
-        <value/>
+        <value />
+      </setting>
+      <setting name="Theme" serializeAs="String">
+        <value>Blue</value>
+      </setting>
+      <setting name="RMP" serializeAs="String">
+        <value>True</value>
       </setting>
     </KeyBit_ID.Properties.Settings>
   </userSettings>
